src/test/deca/syntax/invalid/synt/missingCPar.deca
// @expected_output deca:3:11:
{
    print(x;
}
